# server

./: .gitignore  2025-03-24.ipc  2025-03-24.log.ipc  2025-03-26.log.ipc  Cargo.toml  README.adoc  config.toml  default_config.toml  input1.parquet  output.ipc
output/turbidity/: 2025-03-27-19-36-59.log.parquet  2025-03-27-19-38-38.log.parquet  2025-03-27-19-40-18.log.parquet  2025-03-27-19-41-58.log.parquet
src/: commander.rs  config.rs  log.rs  logger copy.rs  logger.rs  main.rs  mqtt.rs  repeater.rs  settings.rs  shutdown.rs  temperature.rs  turbidity.rs
src/logger/: logger copy.rs  mod.rs  reader.rs  temperature copy.rs  temperature.rs  turbidity copy.rs  turbidity.rs  writer.rs
src/mqtt/: mod.rs  temperature.rs  turbidity.rs
