[package]
name = "server"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
console-subscriber = "0.4.1"
google_drive = { git = "https://github.com/ippras-blc/google_drive" }
polars = { git = "https://github.com/pola-rs/polars", rev = "be5a4b453ca74bb5e0c782c292e9fca6aa60b203", features = [
    "dtype-datetime",
    "fmt_no_tty",
    "serde",
    "temporal",
], default-features = false }
ron = "0.9.0"
rumqttc = "0.24.0"
rumqttd = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.40"
timed = { git = "https://github.com/ippras-blc/timed", features = ["serde"] }
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
    "sync",
    "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
