[package]
name = "server"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arrow = "54.2.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
console-subscriber = "0.4.1"
futures-async-stream = "0.2.12"
google_drive = { git = "https://github.com/ippras-blc/google_drive" }
parquet = { version = "54.2.1", features = ["async"] }
polars = { version = "0.46.0", features = [
    "dtype-datetime",
    "fmt_no_tty",
    "ipc",
    "serde",
    "temporal",
], default-features = false }
ron = "0.9.0"
rumqttc = "0.24.0"
rumqttd = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "tracing",
] }
tokio-modbus = "0.16.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
